--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "rsuite": "^5.28.1",
     "sass": "^1.58.3",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
